--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ main{
 }
 .go-to-top a{
     text-decoration-line: underline;
+    margin-right: 20px;
 }
 .footer-text{
     text-align: center;
@@ -182,5 +183,11 @@ main{
     }
     .menu-open .hamburger-menu-container{
         display: none;
+    }
+    .go-to-top a{
+        font-size: 20px;
+    }
+    .footer-text{
+        font-size: 14px;
     }
 }
